--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PodcastForLife"
+        android:theme="@style/Theme.Channel"
         tools:targetApi="31">
-        <activity
-            android:name=".TimkiemActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ThuvienActivity"
-            android:exported="false" />
-        <activity
-            android:name=".Profile"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
