--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -26,9 +25,7 @@ android {
     }
 
     buildFeatures{
-        viewBinding {
-            enabled = true
-        }
+        viewBinding true
         dataBinding true
     }
 
@@ -42,30 +39,14 @@ android {
 }
 
 dependencies {
-
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.4.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:29.2.1')
-// When using the BoM, don't specify versions in Firebase dependencies
-// Declare the dependencies for any other desired Firebase products
-    implementation "com.google.firebase:firebase-auth"
-    implementation 'com.google.firebase:firebase-auth-ktx'
-// gradle_firebase_ui_auth
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-    implementation "com.firebaseui:firebase-ui-auth:8.0.0"
-    implementation 'com.google.firebase:firebase-common-ktx:20.3.2'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
