--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,13 +58,18 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-auth:8.0.0"
     implementation 'com.google.firebase:firebase-common-ktx:20.3.2'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
-    implementation 'com.google.firebase:firebase-database:20.0.0'
-
 
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+
+
+
