--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -58,18 +58,16 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-auth:8.0.0"
     implementation 'com.google.firebase:firebase-common-ktx:20.3.2'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-database-ktx'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
-
-
