--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
 
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
